hphp/test/slow/clsmeth-nocompat/elem-unset-notice.php.expectf

Fatal error: Cannot unset a class method pointer in %s/elem-unset-notice.php on line 14
